--- a/image-search.html
+++ b/image-search.html
@@ -11,36 +11,33 @@
 </head>
 
 <body>
+    <!-- header section containing the top right buttons and the logo -->
     <header class="header-wrapper">
             <div class="search-buttons-wrapper">
 
                 <div class="search-button change-page-button">
-                    <a href="images.html">Images</a>
-                </div>
-    
-                <div class="search-button change-page-button">
-                    <a href="advanced.html">Advanced</a>
+                    <a href="index.html">Return</a>
                 </div>
         </div>
-        <img id="logo" src="/images/PROJECT-0.png" alt="Project0 Logo">
+        <img id="logo" src="/images/PROJECT-0-images.jpg" alt="Project0 Logo">
     </header>
 
+
+    <!-- The form containing the searchbar section and the two search buttons -->
     <main class="search-form-wrapper">
-        <form action="https://www.google.com/search" method="GET">
+        <form action="https://www.google.co.uk/search?sclient=img" method="GET">
             <div class="search-bar">
                 <input class="search-box searchbar-icon" name="q" placeholder="Enter your search here" type="text">
             </div>
             <div class="search-buttons-wrapper go">
                 <button class="search-button" type="submit">
-                    Google Search
-                </button>
-                <button class="search-button" type="submit">
-                    Feeling Lucky
+                    Image Search
                 </button>
             </div>
-
+            <input name ="tbm" value="isch" type="hidden">
         </form>
     </main>
+
 </body>
 
 </html>
