3 pages and Feeling Lucky Button

--- a/index.html
+++ b/index.html
@@ -31,15 +31,23 @@
                 <input class="search-box searchbar-icon" name="q" placeholder="Enter your search here" type="text">
             </div>
             <div class="search-buttons-wrapper go">
-                <button class="search-button" type="submit">
-                    Google Search
+                <button name = "btnK" value="Google Search" class="search-button" type="submit">
+                   Google Search
                 </button>
-                <button class="search-button" type="submit">
+
+                <button 
+                    name = "btnI" 
+                    value="I'm Feeling Lucky" 
+                    class="search-button" 
+                    type="submit">
                     Feeling Lucky
                 </button>
+                
+                <input name="ved" value="0ahUKEwikoKjSl8b-AhVYhVwKHVaKDVQQnRsIFA" type="hidden">
+                
             </div>
-
         </form>
+
     </main>
 </body>
 
