--- a/advanced-search.html
+++ b/advanced-search.html
@@ -29,24 +29,24 @@
         <div class="search-box-label">
             Find Pages with ...
         </div>
-        <form action="https://www.google.co.uk/search?sclient=img" method="GET">
+        <form action="https://www.google.co.uk/search" method="GET">
             <div class="adv-search-wrapper">
                 <div class="adv-search-grid">
 
                     <label for="all" class ="adv-search-label">all these words:</label>
-                    <input id="all" class="adv-search-field" name="qxxx" placeholder="Find pages with… 'all these words:'" type="text">
+                    <input id="all" class="adv-search-field" name="as_q" placeholder="" type="text">
                     <span class ="adv-deskonly-label">type the important words: star trek captain Kirk</span>
 
                     <label for="exact" class ="adv-search-label">this exact word or phrase:</label>
-                    <input class="adv-search-field" name="qxx" placeholder="Find pages with… 'this exact word or phrase:'" type="text">
+                    <input class="adv-search-field" name="as_epq" placeholder="" type="text">
                     <span class ="adv-deskonly-label">Put exact words in quotes: "Ferengi"</span>
 
                     <label for="any" class ="adv-search-label">any of these words:</label>
-                    <input class="adv-search-field" name="qxxxx" placeholder="Find pages with… 'any of these words:'" type="text">
+                    <input class="adv-search-field" name="as_oq" placeholder="" type="text">
                     <span class ="adv-deskonly-label">Type OR between all the words you want: <br />Kirk <b>OR</b> Picard</span>
 
                     <label for="none"  class ="adv-search-label">none of these words:</label>
-                    <input class="adv-search-field" name="qxxxxxx" placeholder="Find pages with… 'none of these words:'" type="text">
+                    <input class="adv-search-field" name="as_eq" placeholder="" type="text">
                     <span class ="adv-deskonly-label">Put a minus sign before words you don't want: -<b>goblins</b>, -<b>"Cooties"</b></span>
 
                 </div>
